--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "my-discord-bot",
+  "name": "upnet-bot",
   "version": "1.0.0",
-  "description": "Bot Discord tương tác với Google Apps Script",
+  "description": "Discord bot for IT team management",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.5.0",
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.0",
-    "body-parser": "^1.20.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@discordjs/builders": "^1.11.2",
+    "@discordjs/rest": "^2.5.0",
+    "axios": "^1.3.1",
+    "axios-retry": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0",
+    "discord-api-types": "^0.38.2",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "dotenv-safe": "^9.1.0",
+    "file-type": "^20.5.0",
+    "node-cron": "^3.0.3",
+    "openai": "^4.97.0"
   }
 }
